# Music

./: README.md  config.json  go.mod  go.sum  index.distube.js  index.js  package.json  shard-manager.js
Commands/Puplic/: addtoken.js  bots.js  giveuser.js  help.js  removebots.js  tokens.js  vip.js
Commands/Subscriptions/: addsubtime.js  allsub.js  mysub.js  removesub.js
Music/: index.js  package.json
Music/Commands/Puplic/: bots.js  tokens.js
Music/Commands/Subscriptions/: addsubtime.js  allsub.js  mysub.js
cmd/bot/: main.go
docs/: distributed-music-architecture.md  observability.md  token-subscription-migration.md
gateway-proxy/: go.mod
gateway-proxy/src/: main.go
handler/: messageCreate.js
internal/config/: config.go
internal/discordx/: commands.go
internal/engine/: protection.go
internal/model/: snapshot.go
lib/: runtimeToken.js
lib/storage/: index.js
manager/: Manager.sln
manager/src/Manager.Api/: Manager.Api.csproj  Program.cs
manager/src/Manager.Api/Services/: Contracts.cs  FailoverCoordinator.cs  InMemoryNodeRegistry.cs  RedisStreamCommandBus.cs  RedisSubscriptionService.cs  WeightedLoadBalancer.cs
manager/src/Manager.Api/Storage/: RedisClient.cs
rust-node/: Cargo.toml
rust-node/benches/: packet_pipeline.rs
rust-node/src/: extractor.rs  ipv6_rotator.rs  main.rs
scripts/: k6-voice-stress.js  migrate-storage.js  run-benchmarks.sh
