[package]
name = "audio-node"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
bytes = "1"
ipnetwork = "0.21"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "packet_pipeline"
harness = false
